src/objects/BT_CO_MIRO_SubscriptionIssueFile__c.object
<CustomObject>
    <description>BT_CO_MIRO_SubscriptionIssueFile
to be purged daily... expected volume 30000</description>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication_Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Issue_Date__c</fullName>
        <label>Publication_Issue_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>house_type__c</fullName>
        <label>house_type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>office_house_mail_indicator__c</fullName>
        <label>office_house_mail_indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postal_sector__c</fullName>
        <label>postal_sector</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sub_channel_code__c</fullName>
        <label>sub_channel_code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberId__c</fullName>
        <label>subscriberId</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_count__c</fullName>
        <label>subscriber_count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>subscription_copies__c</fullName>
        <label>subscription_copies</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vendor_number__c</fullName>
        <label>vendor_number</label>
        <length>26</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BT_CO_MIRO_SubscriptionIssueFile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Publication_Code__c</columns>
        <columns>vendor_number__c</columns>
        <columns>Publication_Issue_Date__c</columns>
        <columns>postal_sector__c</columns>
        <columns>sub_channel_code__c</columns>
        <columns>subscriber_count__c</columns>
        <columns>subscriberId__c</columns>
        <columns>subscription_copies__c</columns>
        <columns>office_house_mail_indicator__c</columns>
        <columns>house_type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>BT_CO_MIRO_ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT_CO_MIRO_SubscriptionIssueFile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>